--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="hero-cta">
                     <a href="#contact" class="btn btn-primary" data-translate="hero_cta_contact">Get In Touch</a>
-                    <a href="assets/Ritesh_Zambre_Resume.pdf" download class="btn btn-secondary" data-translate="hero_cta_resume">Download Resume</a>
+                    <a href="assets/Ritesh_Zambre_Resume.pdf" download="Ritesh_Zambre_Resume.pdf" class="btn btn-secondary" data-translate="hero_cta_resume">Download Resume</a>
                 </div>
             </div>
         </div>
@@ -397,7 +397,7 @@
                             </svg>
                         </div>
                         <h3 data-translate="contact_email_title">Email</h3>
-                        <a href="mailto:riteshz.aiworks@gmail.com" class="contact-link">riteshz.aiworks@gmail.com</a>
+                        <a href="/cdn-cgi/l/email-protection#ddafb4a9b8aeb5f3a7bcb0bfafb89db8b0bcb4b1f3beb2b0" class="contact-link"><span class="__cf_email__" data-cfemail="03716a7766706b2d79626e61716643666e626a6f2d606c6e">[email&#160;protected]</span></a>
                         <p class="contact-note" data-translate="contact_email_note">Preferred for detailed inquiries</p>
                     </div>
 
@@ -408,7 +408,7 @@
                             </svg>
                         </div>
                         <h3 data-translate="contact_whatsapp_title">WhatsApp</h3>
-                        <a href="https://wa.me/917028224490" class="contact-link" target="_blank">+91 70282 24490</a>
+                        <a href="https://wa.me/919876543210" class="contact-link" target="_blank">+91 98765 43210</a>
                         <p class="contact-note" data-translate="contact_whatsapp_note">Quick responses</p>
                     </div>
 
@@ -421,7 +421,7 @@
                             </svg>
                         </div>
                         <h3 data-translate="contact_linkedin_title">LinkedIn</h3>
-                        <a href="https://linkedin.com/in/riteshz/" class="contact-link" target="_blank">linkedin.com/in/riteshz/</a>
+                        <a href="https://linkedin.com/in/riteshzambre" class="contact-link" target="_blank">linkedin.com/in/riteshzambre</a>
                         <p class="contact-note" data-translate="contact_linkedin_note">Professional network</p>
                     </div>
 
@@ -440,7 +440,7 @@
                 <div class="contact-cta">
                     <h3 data-translate="contact_cta_title">Download Professional Documents</h3>
                     <div class="document-links">
-                        <a href="assets/Ritesh_Zambre_Resume.pdf" download class="doc-link">
+                        <a href="assets/Ritesh_Zambre_Resume.pdf" download="Ritesh_Zambre_Resume.pdf" class="doc-link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                                 <polyline points="14 2 14 8 20 8"/>
@@ -449,7 +449,7 @@
                             </svg>
                             <span data-translate="contact_resume">Resume</span>
                         </a>
-                        <a href="assets/Ritesh_Zambre_Cover_Letter.pdf" download class="doc-link">
+                        <a href="assets/Ritesh_Zambre_Cover_Letter.pdf" download="Ritesh_Zambre_Cover_Letter.pdf" class="doc-link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                                 <polyline points="14 2 14 8 20 8"/>
@@ -468,7 +468,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p data-translate="footer_text">&copy; 2026 Ritesh Jaychandra Zambre. All rights reserved.</p>
+                <p data-translate="footer_text">&copy; 2025 Ritesh Jaychandra Zambre. All rights reserved.</p>
                 <p class="footer-subtitle" data-translate="footer_subtitle">Building intelligent systems, one model at a time.</p>
             </div>
         </div>
@@ -477,10 +477,4 @@
     <!-- Floating Contact Button -->
     <a href="#contact" class="floating-btn" title="Contact Me">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
-        </svg>
-    </a>
-
-    <script src="script.js"></script>
-</body>
-</html>
+            <path d="M
