Update contact links in index.html

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                             </svg>
                         </div>
                         <h3 data-translate="contact_whatsapp_title">WhatsApp</h3>
-                        <a href="https://wa.me/919876543210" class="contact-link" target="_blank">+91 98765 43210</a>
+                        <a href="https://wa.me/917028224490" class="contact-link" target="_blank">+91 70282 24490</a>
                         <p class="contact-note" data-translate="contact_whatsapp_note">Quick responses</p>
                     </div>
 
@@ -421,7 +421,7 @@
                             </svg>
                         </div>
                         <h3 data-translate="contact_linkedin_title">LinkedIn</h3>
-                        <a href="https://linkedin.com/in/riteshzambre" class="contact-link" target="_blank">linkedin.com/in/riteshzambre</a>
+                        <a href="https://linkedin.com/in/riteshz" class="contact-link" target="_blank">linkedin.com/in/riteshz</a>
                         <p class="contact-note" data-translate="contact_linkedin_note">Professional network</p>
                     </div>
 
@@ -432,7 +432,7 @@
                             </svg>
                         </div>
                         <h3 data-translate="contact_github_title">GitHub</h3>
-                        <a href="https://github.com/riteshzambre" class="contact-link" target="_blank">github.com/riteshzambre</a>
+                        <a href="https://github.com/Ritesh0710" class="contact-link" target="_blank">github.com/Ritesh0710</a>
                         <p class="contact-note" data-translate="contact_github_note">Open source contributions</p>
                     </div>
                 </div>
