--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                             </svg>
                         </div>
                         <h3 data-translate="contact_email_title">Email</h3>
-                        <a href="/cdn-cgi/l/email-protection#ddafb4a9b8aeb5f3a7bcb0bfafb89db8b0bcb4b1f3beb2b0" class="contact-link"><span class="__cf_email__" data-cfemail="03716a7766706b2d79626e61716643666e626a6f2d606c6e">riteshz.aiworks@gmail.com</span></a>
+                        <a href="mailto:riteshz.aiworks@gmail.com" class="contact-link"><span class="__cf_email__" data-cfemail="03716a7766706b2d79626e61716643666e626a6f2d606c6e">riteshz.aiworks@gmail.com</span></a>
                         <p class="contact-note" data-translate="contact_email_note">Preferred for detailed inquiries</p>
                     </div>
 
